main.tf
#Create resource group
resource "azurerm_resource_group" "rg"{
location = var.resource_group_location
name = "${random_pet.prefix.id}-rg"
}
#Create VNET
resource  "azurerm_virtual_network" "my_terraform_network"{
name = "${random_pet.prefix.id}-vnet"
address_space = ["10.0.0.0/16"]
location = azurerm_resource_group.rg.location
resource_group_name = azurerm_resource_group.rg.name
}

#Create Subnet
resource "azurerm_subnet" "my_terraform_subnet"{
    name = "${random_pet.prefix.id}-subnet"
    resource_group_name = azurerm_resource_group.rg.name
    virtual_network_name = azurerm_virtual_network.my_terraform_network.name
    address_prefixes = ["10.0.1.0/24"]
}

#Create Public IPs
resource "azurerm_public_ip" "my_terraform_public_ip"{
    name = "${random_pet.prefix.id}-public-ip"
    location = azurerm_resource_group.rg.location
    resource_group_name =  azurerm_resource_group.rg.name
    allocation_method = "Dynamic"
}

#Create NSG and rules
resource "azurerm_network_security_group" "my_terraform_nsg"{
    name = "${random_pet.prefix.id}-nsg"
    location = azurerm_resource_group.rg.location
    resource_group_name  = azurerm_resource_group.rg.name

    security_rule {
        name = "RDP"
        priority = 1000
        direction = "Inbound"
        access = "Allow"
        protocol = "*"
        source_port_range = "*"
        destination_port_range = "3389"
        source_address_prefix = "*"
        destination_address_prefix = "*"
    }

    security_rule {
        name = "web"
        priority = 1001
        direction = "Inbound"
        access = "Allow"
        protocol = "Tcp"
        source_port_range = "*"
        destination_port_range = "80"
        source_address_prefix = "*"
        destination_address_prefix = "*"
    }

}

#Create network interface
resource "azurerm_network_interface" "my_terraform_nic" {
    name = "${random_pet.prefix.id}-nic"
    location = azurerm_resource_group.rg.location
    resource_group_name = azurerm_resource_group.rg.name

    ip_configuration {
      name = "my_nic_configuration"
      subnet_id =  azurerm_subnet.my_terraform_subnet.id
      private_ip_address_allocation = "Dynamic"
      public_ip_address_id = azurerm_public_ip.my_terraform_public_ip.id
    }
}

#Connect the security group to the network interface
resource "azurerm_network_interface_security_group_association" "example" {
    network_interface_id = azurerm_network_interface.my_terraform_nic.id
    network_security_group_id = azurerm_network_security_group.my_terraform_nsg.id
}

#Create storage account for boot diagnostics
resource "azurerm_storage_account" "my_storage_account"{
    name = "diag${random_id.random_id.hex}"
    location = azurerm_resource_group.rg.location
    resource_group_name = azurerm_resource_group.rg.name
    account_tier = "Standard"
    account_replication_type = "LRS"
}

#Create VM
resource "azurerm_windows_virtual_machine" "main" {
    name = "${var.prefix}-vm"
    admin_username = "azureuser"
    admin_password = random_password.password.result
    location = azurerm_resource_group.rg.location
    resource_group_name = azurerm_resource_group.rg.name
    network_interface_ids = [azurerm_network_interface.my_terraform_nic.id]
    size = "Standard_DS1_v2"
    os_disk {
      name = "myOsDisk"
      caching = "ReadWrite"
      storage_account_type = "Standard_LRS"
    }
    source_image_reference {
      publisher = "MicrosoftWindowsServer"
      offer = "WindowsServer"
      sku = "2022-datacenter-azure-edition"
      version = "latest"
    }

    boot_diagnostics {
        storage_account_uri = azurerm_storage_account.my_storage_account.primary_blob_endpoint
    }
}

#Install IIS web server to VM
resource "azurerm_virtual_machine_extension" "web_server_install"{
    name = "${random_pet.prefix.id}-wsi"
    virtual_machine_id = azurerm_windows_virtual_machine.main.id
    publisher ="Microsoft.compute"
    type = "customScriptExtension"
    type_handler_version = "1.8"
    auto_upgrade_minor_version = true

    settings = <<SETTINGS
    {
    "commandToExecute":"powershell -executionpolicy unrestricted Install-WindowsFeature -Name web-server -IncludeAllSubFeature -IncludeManagementTools"
    }
    SETTINGS
}

#Generate random text for a unique storage account name
resource "random_id" "random_id"{
    keepers = {
      #Generate a new ID only when a new resource group is defined
      resource_group = azurerm_resource_group.rg.name 
    }
    byte_length = 8
}

resource "random_password" "password"{
    length = 20
    min_lower = 1
    min_upper = 1
    min_numeric = 1
    min_special =  1
    special =  true
}

resource "random_pet" "prefix"{
    prefix = var.prefix
    length = 1

}
